--- a/style.css
+++ b/style.css
@@ -9,14 +9,24 @@ html, body {
 }
 body {
   font-family: sans-serif;
-  background: pink;
+  background: #fafafa;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
-
+.links {
+  display: flex;
+  padding-bottom: 10px;
+}
+.link {
+  height: 30px;
+  padding: 0 3px;
+}
+.link:hover {
+  cursor: pointer;
+}
 .scottPic {
   width: 400px;
-
+  padding-bottom: 10px;
 }
