--- a/style.css
+++ b/style.css
@@ -15,6 +15,12 @@ body {
   align-items: center;
   justify-content: center;
 }
+h1 {
+  padding-bottom: 10px;
+}
+h2 {
+  padding-bottom: 10px;
+}
 .links {
   display: flex;
   padding-bottom: 10px;
