--- a/style.css
+++ b/style.css
@@ -4,18 +4,17 @@
   box-sizing: border-box;
 }
 
-html, body, main {
+html, body {
   height: 100%;
 }
 body {
   font-family: sans-serif;
   background: #fafafa;
-}
-main {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 h1 {
   padding-bottom: 10px;
@@ -23,9 +22,10 @@ h1 {
 h2 {
   padding-bottom: 10px;
 }
-.links {
+nav {
   display: flex;
   padding-bottom: 10px;
+  justify-content: center;
 }
 .link {
   height: 30px;
