--- a/style.css
+++ b/style.css
@@ -37,3 +37,13 @@ nav {
 .scottPic {
   padding-bottom: 10px;
 }
+
+footer {
+  display: flex;
+  flex-direction: column;
+}
+
+.zorkLink {
+  text-decoration: none;
+  font-size: 2rem;
+}
