--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ html, body {
 }
 body {
   font-family: sans-serif;
+  color: #282928;
   background: #fafafa;
   display: flex;
   flex-direction: column;
