--- a/style.css
+++ b/style.css
@@ -44,7 +44,12 @@ footer {
   flex-direction: column;
 }
 
-.zorkLink {
+.boardEmoji {
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 2em;
+}
+
+.leafEmoji {
+  text-decoration: none;
+  font-size: 1.5em;
 }
