--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 html, body {
-  height: 100%;
+  /* height: 100%; */
 }
 body {
   font-family: sans-serif;
@@ -16,8 +16,11 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 h1 {
+  /* padding-top: 20px; */
   padding-bottom: 10px;
 }
 p {
