--- a/style.css
+++ b/style.css
@@ -43,7 +43,15 @@ nav {
 .scottPic {
   padding-bottom: 10px;
 }
-
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.intro {
+  max-width: 600px;
+  padding: 0 30px 10px 30px;
+}
 footer {
   display: flex;
   flex-direction: column;
