--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@
 }
 
 html, body {
-  /* height: 100%; */
+  height: 100%;
 }
 body {
   font-family: sans-serif;
   color: #282928;
   background: #fafafa;
-  /* display: flex; */
+  display: flex;
   flex-direction: column;
   align-items: center;
+  align-self: center;
   justify-content: center;
   text-align: center;
   padding-top: 30px;
