--- a/style.css
+++ b/style.css
@@ -1,74 +1,509 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+:root {
+  --dark1: hsl(267, 100%, 7%);
+  --dark2: hsl(267, 70%, 20%);
 }
 
-html, body {
-  height: 100%;
-}
-body {
-  font-family: sans-serif;
-  color: #282928;
-  background: #fafafa;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  align-self: center;
-  justify-content: center;
-  text-align: center;
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-h1 {
-  padding-bottom: 10px;
-}
 p {
-  padding-bottom: 10px;
+  margin: 0;
 }
-h3 {
-  padding-bottom: 10px;
+
+html {
+  /* border-box box model allows us to add padding and border to our elements without increasing their size */
+  box-sizing: border-box;
+  /* A system font stack so things load nice and quick! */
+  font-family:'Fira Sans', sans-serif;
+  font-weight: medium;
+  font-size: 20px;
+  letter-spacing: 1px;
+  line-height: 1.25;
 }
-nav {
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+  scrollbar-width: none;
+
+}
+
+body {
+  margin: 0px;
+  padding: 0;
+  min-width:270px;
+  scrollbar-width: none;
+
+}
+
+.container {
   display: flex;
-  padding-bottom: 10px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: stretch;
   justify-content: center;
-}
-.link {
-  height: 30px;
-  padding: 0 3px;
-}
-.link:hover {
-  cursor: pointer;
-}
-.scottPic {
-  padding-bottom: 10px;
-}
-main {
-  display: flex;
-  flex-direction: column;
+  min-width: 270px;
   align-items: center;
+  min-height: 100vh;
 }
-.intro {
+.about-container {
+  position: relative;
+  /* min-height: 300px; */
+
+}
+.about {
+  margin: auto;
+  display: grid;
+  /* padding-top: 20px; */
+  place-items: center;
+  width: 150px;
+  height: 150px;
+  margin-bottom: 15px;
+  margin-top: 100px;
+  /* margin-bottom: -215px; */
+}
+
+.hi {
+  /* min-width: 200px; */
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
+  color: hsl(277, 53%, 42%);
+  font-size: 2rem;
+  position: relative;
+  font-weight: bold;
+  text-shadow: -2px 2px 0px #fd992d, -4px 4px 0px #fff;
+  transform: translateY(-97px) rotate(-6deg);
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  /* height: 60px; */
+  /* margin: 20px; */
+  padding: 7px 30px;
+ }
+ /* .hi:before {
+  content: '';
+  position: absolute;
+  background: radial-gradient(circle at bottom left, #f95253 0%, #fd992d 50%);  
+  width: 4.15em;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  transform: translateX(-20px);
+  overflow: auto;
+ } */
+.hi-orange {
+  background: radial-gradient(circle at bottom left, #f95253 0%, #fd992d 50%);  
+  padding: 10px 5px 10px 20px;
+  margin-right: 7px;
+}
+.headshot {
+  width: 150px;
+  grid-row: 1 / -1;
+  grid-column: 1 / -1;
+}
+
+.main-pic-section {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    display: grid;
+    grid-template-columns: auto 150px auto;
+}
+
+.personal-statement {
+  margin-bottom: 0px;
+}
+.about > a {
+  grid-row: 1 / 1;
+  grid-column: 1 / -1;
+  /* filter: drop-shadow(0 0 2 hsla(277, 100%, 15%, 0.12)); */
+  transition: all 250ms ease;
+}
+
+.github {
+  transform: rotate(-40deg) translateX(96px) rotate(40deg) scale(1.3);
+}
+.github:hover {
+  transform: rotate(-40deg) translateX(99px) rotate(40deg) scale(1.5);
+  filter: drop-shadow(0 1px .5px hsla(277, 100%, 15%, .4));
+}
+.linkedin {
+  transform: rotate(-17deg) translateX(96px) rotate(17deg) scale(1.3);
+}
+.linkedin:hover {
+  transform: rotate(-17deg) translateX(99px) rotate(17deg) scale(1.5);
+  filter: drop-shadow(0 1px .5px hsla(277, 100%, 15%, .4));
+}
+.resume {
+  transform: rotate(6deg) translateX(96px) rotate(-6deg) scale(1.3);
+}
+.resume:hover {
+  transform: rotate(6deg) translateX(99px) rotate(-6deg) scale(1.5);
+  filter: drop-shadow(0 1px .5px hsla(277, 100%, 15%, .3));
+}
+.work {
+  width: 100vw;
+  min-width: 270px;
+  background: radial-gradient(circle at top left, hsl(330, 78%, 65%) 0%, hsl(277, 68%, 67%) 50%);
+  display: block;
+  /* margin: 5em auto;
+  padding: 5em 0; */
+  padding-top: 10px;
+  position: relative;
+  transform: skewY(3deg);
+  align-self: center;
+  text-align: center;
+}
+
+.work:after {
+  background: radial-gradient(circle at top right, #fd992d 0%, #f95253 50%);
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transform: skewY(-6deg);
+}
+
+.statement {
+  width: 100%;
+  margin: 15px 10px;
+}
+
+.project-section {
+  margin: auto;
   max-width: 600px;
-  padding: 0 30px 10px 30px;
-}
-footer {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: white;
+  position: relative;
+  transform: skewY(-3deg);
+  z-index: 1;
+  margin-bottom: 10px;
+  min-width: 200px;
 }
 
-.boardEmoji {
+.project-container {
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 200px auto;
+  width: 200px;
+  min-width: 200px;
+  padding: 20px;
+  text-align: center;
+}
+
+.project-links {
+  opacity: 0;
+  transition: all 400ms ease;
+  text-align: left;
+}
+
+.project-container:hover > .project-links{
+  opacity: 1;
+  transform: scale(1.08);
+}
+
+.rounded {
+  border-radius: 50%;
+}
+
+.thumbnail {
+  width: 75px;
+  -webkit-shape-outside:circle();
+  shape-outside: circle();
+  float: left;
+  margin: 0 20px 0 0;
+  border: solid 2px hsl(277, 53%, 42%);
+  /* box-shadow: 0 1px 3px hsla(277, 100%, 15%, 0.12), 0 1px 2px hsl(277, 100%, 15%, 0.24); */
+  transition: all 250ms ease;
+
+}
+
+.project-container:hover > a>img {
+  /* box-shadow: 0 2px 1px hsla(277, 100%, 15%, 0.5); */
+  transform: scale(1.08);
+}
+
+.project-container>a>img:hover {
+  box-shadow: 0 2px 1px hsla(277, 100%, 15%, 0.5);
+  transform: scale(1.11);
+}
+
+.project-links>a>img {
+  transition: all 400ms ease;
+}
+.project-links>a>img:hover {
+  transform: scale(1.11);
+  filter: drop-shadow(0 1px .5px hsla(277, 100%, 15%, .3));
+}
+
+.project-title {
+  text-align: center;
+  font-size: 16px;
+  margin-bottom: 10px;
+  position: relative;
+  display: inline-block;
+  padding: 7px 0 3px 10px;
+  transition: all 0.5s ease;
+}
+
+.project-container:hover > .project-title {
+  transform: scale(1.08);
+}
+
+.project-title:before {
+  content: '';
+  position: absolute;
+  background-color: hsl(277, 53%, 42%);
+  width: 50%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+
+.description {
+  font-size: 11px;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  margin: 5px 0;
+}
+
+.clickable {
+  z-index: 50;
+}
+
+.icon {
+  width: 25px;
+  border-radius: 0;
+}
+
+.l-right {
+  float: right;
+  margin: 0 0 0 20px;
+}
+.l-text-right {
+  text-align: right;
+}
+
+.extras-container {
+  padding-top: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 600px;
+  margin: auto;
+  min-width: 200px;
+  justify-content: center;
+  z-index: 2;
+  /* margin: 20px; */
+}
+
+.extras-section {
+  /* border: solid 1px blue; */
+  /* max-width: 200px; */
+  padding: 0 20px;
+}
+
+.text-link {
+  /* background: radial-gradient(circle at top right, #fd992d 0%, hsl(360, 93%, 65%) 50%); */
+  background-image: linear-gradient(to bottom, #fd992d, hsl(360, 93%, 65%) 33%, hsl(330, 78%, 65%) 66%, hsl(277, 68%, 67%));
+  background-size: 100% 300%;
+  /* background-position: 0 0%; */
+  /* transition-property: background-position; */
+  transition: all .75s;
+  color: white;
+  padding: 0px 6px;
   text-decoration: none;
-  font-size: 2em;
+  z-index: 666;
 }
 
-.leafEmoji {
-  text-decoration: none;
-  font-size: 1.5em;
+.text-link:hover {
+  background-position: bottom;
 }
 
-.quote {
-  font-size: 12px;
-  font-style: italic;
+.tde-logo {
+  width: 125px;
+  float: left;
+  margin-right: 20px;
+  margin-left: 0px;
+  shape-outside: polygon(35.15% 3.32%, 49.18% -0.71%, 65.97% 3.29%, 73.79% 10.27%, 84.01% 31.23%, 82.5% 49.53%, 79.08% 69.91%, 78.09% 78.69%, 78.86% 84.79%, 93.03% 89.9%, 93.74% 101.39%, -1.02% 100.45%, -0.99% 90.42%, 12.87% 89.44%, 13% 77.87%, 20.11% 68.58%, 13.17% 52.17%, 13.92% 30.8%, 23.05% 12.63%);
+}
+
+.footer-container {
+  overflow: hidden;
+  /* height: 225px; */
+  align-self: flex-end;
+  padding-top: 70px;
+  margin-top: -100px;
+  /* padding-bottom: 100px; */
+}
+
+.footer {
+  background: radial-gradient(circle at top right, #fd992d 0%, hsl(360, 93%, 65%) 50%);
+  color: white;
+  transform: translateY(60px) skewY(3deg);
+  height: auto;
+  overflow: visible;
+  text-align: center;
+  /* margin-top: 20px; */
+  padding-top: 40px;
+  padding-bottom: 90px;
+  width: 100vw;
+  min-width: 270px;
+}
+.footer:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: radial-gradient(circle at top left, hsl(330, 78%, 65%) 0%, hsl(277, 68%, 67%) 50%);
+  transform: skewY(-6deg);
+  z-index: -1;
+  height: 800px;
+}
+
+.footer-content {
+  transform: skewY(-3deg);
+}
+
+.mail-icon {
+  width: 37.5px;
+  transition: all 250ms ease;
+  filter: fill(#fd992d);
+}
+
+.mail-icon:hover {
+  transform: scale(1.25) rotate(7deg) translateX(4px) translateY(4px);
+  filter: drop-shadow(0 2px 2px hsla(277, 100%, 15%, .3));
+}
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  padding-bottom: 13px;
+  text-align: left;
+  margin: 10px 20px;
+}
+.always-looking {
+  max-width: 600px;
+  /* margin: auto; */
+  display: inline-block;
+  margin: 10px 20px;
+}
+.hit-me-up {
+  text-align: center;
+  background: radial-gradient(circle at bottom left, #f95253 0%, #fd992d 50%);  
+  color: hsl(277, 53%, 42%);
+  font-size: 1.25rem;
+  font-weight: bold;
+  text-shadow: -1.5px 1.5px 0px #fd992d, -3px 3px 0px #fff;
+  padding: 10px 15px;
+  margin-right: 15px;
+  transform: translateY(15px) rotate(-13deg);
+}
+
+.skate {
+  float: left;
+  width: 330px;
+  margin-right: 15px;
+}
+
+.videos-link {
+  margin-right: 2.5px;
+}
+
+@media(max-width:799px){
+  .m-right {
+    float: right;
+    margin: 0 0 0 20px;
+  }
+  .m-left {
+    float: left;
+    margin: 0 20px 0 0;
+  }
+  .m-text-right {
+    text-align: right;
+  }
+  .m-text-left {
+    text-align: left;
+  }
+  .statement {
+    /* width: 100vw; */
+  }
+}
+
+@media(max-width:599px){
+  .s-right {
+    float: right;
+    margin: 0 0 0 20px;
+  }
+  .s-left {
+    float: left;
+    margin: 0 20px 0 0;
+  }
+  .s-text-right {
+    text-align: right;
+  }
+  .s-text-left {
+    text-align: left;
+  }
+  .statement {
+    width: 400px;
+  }
+
+}
+
+@media(max-width:532px){
+  .skate {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+}
+
+@media(max-width:415px){
+  .project-links {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1.08);  
+  }
+  .project-section {
+    max-width: 399px;
+    padding: 0 50px;
+  }
+  .project-container:nth-child(odd) {
+    margin-right: auto;
+  }
+  .project-container:nth-child(even) {
+    margin-left: auto;
+  }
+  .xs-right {
+    float: right;
+    margin: 0 0 0 20px;
+  }
+  .xs-left {
+    float: left;
+    margin: 0 20px 0 0;
+  }
+  .xs-text-right {
+    text-align: right;
+  }
+  .xs-text-left {
+    text-align: left;
+  }
+  .statement {
+    margin: 0 -35px;
+    margin-top: 10px;
+  }
+
 }
