--- a/style.css
+++ b/style.css
@@ -414,9 +414,12 @@ body {
 }
 
 .skate {
+  /* transform: translateY(15px) rotate(-6deg); */
   float: left;
   width: 330px;
   margin-right: 15px;
+  /* shape-outside: polygon(35.15% 3.32%, 49.18% -0.71%, 65.97% 3.29%, 73.79% 10.27%, 84.01% 31.23%, 82.5% 49.53%, 79.08% 69.91%, 78.09% 78.69%, 78.86% 84.79%, 93.03% 89.9%, 93.74% 101.39%, -1.02% 100.45%, -0.99% 90.42%, 12.87% 89.44%, 13% 77.87%, 20.11% 68.58%, 13.17% 52.17%, 13.92% 30.8%, 23.05% 12.63%); */
+
 }
 
 .videos-link {
